chore(ajuste geral) correção bug de metodos, correção de bug na documentaçã,  e atualização de libs
