# api-social-network-sysmap/routes/post.routes.js
@@ -7,6 +7,7 @@ router.post("/:userId", PostController.createPost);
 router.post("/:currentProfileId/:postTargetId", PostController.like);
 router.post("/:currentProfileId/:postTargetId", PostController.deslike);
 router.get("/", PostController.showAllPost);
+router.get("/timeLine/:userId", PostController.timelime);
 router.get("/allposts/:userId", PostController.showAllUserPosts);
 router.get("/onepost/:userId/:postId", PostController.showOneUserPost);
 router.put("/update/:userId/:postId", PostController.updatePost);
